# stone

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
docs/: installation.md
examples/: manifest.json
src/: fat.rs  fwup.rs  lib.rs  log.rs  main.rs  manifest.rs
src/commands/stone/: build.rs  bundle.rs  create.rs  describe_manifest.rs  mod.rs  provision.rs  validate.rs
tests/commands/stone/: mod.rs
tests/commands/stone/create/: mod.rs
tests/commands/stone/describe_manifest/: mod.rs
tests/commands/stone/provision/: mod.rs
tests/commands/stone/validate/: mod.rs
tests/fixtures/coverage/: image_2  manifest.json  rootdisk.conf  stone.json
tests/fixtures/missing_device_fwup_template/: os-release  stone.json
tests/fixtures/partition_without_image/: stone.json
