[package]
name = "stone"
version = "1.1.0"
edition = "2024"
description = "A CLI for managing Avocado stones."
homepage = "https://github.com/avocado-linux/stone"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fatfs = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simply_colored = "0.1"
